# snyk-code-review-exercise

./: .eslintrc.json  .flake8  .pre-commit-config.yaml  README.md  Snyk.Exercise.sln  catalog-info.yaml  go.mod  go.sum  main.go  package-lock.json  package.json  package.py  pyproject.toml  settings.py  type.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: quality.yml
Snyk.Exercise.WebApi/: NpmPackage.cs  PackageDependencies.cs  Program.cs  Snyk.Exercise.WebApi.csproj  Startup.cs
Snyk.Exercise.WebApi.Test/: PackageControllerTest.cs  Snyk.Exercise.WebApi.Test.csproj
Snyk.Exercise.WebApi/Controllers/: PackageController.cs
Snyk.Exercise.WebApi/Properties/: launchSettings.json
api/: api.go  api_test.go
api/testdata/: react-16.13.0.json
project/: settings.py  urls.py
src/: app.py  app.ts  main.ts  models.py  package.py  package.ts  types.ts
test/: app.test.ts  package.test.ts
tests/: test_package.py
